# rust-book

./: Cargo.toml  README.md  cargo.toml
chapter10/src/: main.rs
chapter12/: README.md
chapter12/chapter12-channel/: Cargo.toml
chapter12/chapter12-parallel-add/: Cargo.toml
chapter12/chapter12-parallel-thumbnail/: Cargo.toml
chapter12/chapter12-rayon/: Cargo.toml
chapter12/chapter12-sync/: Cargo.toml
chapter2/: Cargo.toml  main
chapter5/: README.md
chapter5/chapter5-3/src/: main.rs
chapter5/chapter5-4/: Cargo.toml
chapter5/chapter5-4/src/: main.rs
chapter5/chapter5-5/: Cargo.toml
chapter6/src/: main.rs
chapter7/use_remote_crate/: Cargo.toml
