[workspace]
members = [
    "chapter2/hello_world",
    "chapter3/arithmetic-operations-quiz",
    "chapter5/chapter5-2",
    "chapter5/chapter5-3",
    "chapter5/chapter5-4",
    "chapter5/chapter5-5",
    "chapter6",
    "chapter7/my_package",
    "chapter7/my_library",
    "chapter7/another_bin",
    "chapter7/use_remote_crate",
    "chapter8",
    "chapter9",
    "chapter10",
    "chapter12/chapter12-sync",
    "chapter12/chapter12-parallel-add",
    "chapter12/chapter12-parallel-thumbnail",
    "chapter12/chapter12-channel",
    "chapter12/chapter12-rayon",
    "chapter13/merge-array",
    "chapter13/parenthesis",
]
resolver = "2"
